removed unnecessary things in pom