@@ -12,11 +12,6 @@
 	  <version>1.0-SNAPSHOT</version>
 	</parent>
 	<repositories>
-		<repository>
-            <id>apache-m2-snapshot</id>
-            <name>Apache Snapshot Repository</name>
-            <url>https://repository.apache.org/content/groups/snapshots</url>
-        </repository>
         <repository>
 		    <id>snapshots</id>
 		    <name>erebe-vm23-snapshots</name>
@@ -24,22 +19,11 @@
         </repository>
     </repositories>
 	  <dependencies>
-	    <dependency>
-		  <groupId>fr.unice.polytech.isa</groupId>
-		  <artifactId>webservice-module</artifactId>
-		  <version>1.0-SNAPSHOT</version>
-		  <type>war</type>
-	     </dependency>
-	     <dependency>
-		  <groupId>fr.unice.polytech.isa</groupId>
-		  <artifactId>interface-bank-module</artifactId>
-		  <version>1.0-SNAPSHOT</version>
-	     </dependency>
-	     <dependency>
-		  <groupId>fr.unice.polytech.isa</groupId>
-		  <artifactId>interface-client-module</artifactId>
-		  <version>1.0-SNAPSHOT</version>
-	     </dependency>
+        <dependency>
+            <groupId>fr.unice.polytech.isa</groupId>
+            <artifactId>entities-module</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 	     <dependency>
             <groupId>fr.unice.polytech.isa</groupId>
             <artifactId>cc-module</artifactId>
@@ -58,11 +42,22 @@
             <version>1.0-SNAPSHOT</version>
             <type>war</type>
         </dependency>
-        <dependency>
-            <groupId>fr.unice.polytech.isa</groupId>
-            <artifactId>entities-module</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+	    <dependency>
+		  <groupId>fr.unice.polytech.isa</groupId>
+		  <artifactId>webservice-module</artifactId>
+		  <version>1.0-SNAPSHOT</version>
+		  <type>war</type>
+	     </dependency>
+	     <dependency>
+		  <groupId>fr.unice.polytech.isa</groupId>
+		  <artifactId>interface-bank-module</artifactId>
+		  <version>1.0-SNAPSHOT</version>
+	     </dependency>
+	     <dependency>
+		  <groupId>fr.unice.polytech.isa</groupId>
+		  <artifactId>interface-client-module</artifactId>
+		  <version>1.0-SNAPSHOT</version>
+	     </dependency>
       </dependencies>
 	<build>
 	  <finalName>integration</finalName>
@@ -73,6 +68,9 @@
 			<version>2.17</version>
 			<configuration>
 				<reuseForks>false</reuseForks>
+				<excludes>
+                    <exclude>**/*IntegrationTest.java</exclude>
+                </excludes>
 			</configuration>
 			<executions>
 				<execution>
@@ -82,9 +80,6 @@
 					</goals>
 					<phase>integration-test</phase>
 					<configuration>
-						<sources>
-							<source>src/test/java/integration</source>
-						</sources>
 						<excludes>
 							<exclude>**/*Test.java</exclude>
 						</excludes>
@@ -95,27 +90,6 @@
 				</execution>
 			</executions>
 		</plugin>
-		
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.openejb.maven</groupId>
-                <artifactId>tomee-maven-plugin</artifactId>
-                <version>${versions.tomee.embedded}</version>
-                <configuration>
-                    <!-- From TomEE to TomEE+ to support the web services stack -->
-                    <tomeeClassifier>plus</tomeeClassifier>
-                    <args>-Xmx512m -XX:PermSize=256m</args>
-                    <deployOpenEjbApplication>true</deployOpenEjbApplication>
-                </configuration>
-            </plugin>
 	  </plugins>
 	</build>
 </project>
